# web-sys-main-loop

./: Cargo.toml  README.md
src/: frame_state.rs  lib.rs  main_loop.rs
src/input_handler/: input_state.rs  keyboard_state.rs  mod.rs  mouse_state.rs
