[package]
name = "web-sys-main-loop"
version = "0.1.0"
edition = "2021"
package = "Apache-2.0"
license-file = "LICENSE."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = ["Document", "Window", "HtmlCanvasElement", "WebGl2RenderingContext", "KeyboardEvent", "MouseEvent"]}
